# android-virtual-device-kernel-modules

./: 0001-kleaf-virtual_device-Add-ABI-monitoring-targets.patch  BUILD.bazel  Kbuild  Kconfig  Kconfig.ext  Kconfig.goldfish_address_space  Makefile  OWNERS  aarch64.fragment  aarch64_16k.fragment  arm.fragment  build.config.crashdump  build.config.crashdump.aarch64  build.config.crashdump.x86_64  build.config.cuttlefish.aarch64  build.config.cuttlefish.arm  build.config.cuttlefish.i686  build.config.cuttlefish_kprobes.aarch64  build.config.cuttlefish_kprobes.x86_64  build.config.fvp  build.config.gce.aarch64  build.config.gce.x86_64  build.config.goldfish  build.config.goldfish.aarch64  build.config.goldfish.car.x86_64  build.config.goldfish.x86_64  build.config.kiwi.x86_64  build.config.microdroid  build.config.microdroid.aarch64  build.config.microdroid.x86_64  build.config.pure.aarch64  build.config.server.aarch64  build.config.server.x86_64  build.config.trout.coqos  build.config.trout.qnxvm  build.config.virtual_device  build.config.virtual_device.aarch64  build.config.virtual_device.aarch64.16k  build.config.virtual_device.arm  build.config.virtual_device.i686  (+35 more)
arcvm_drivers/dev-sw-sync/: Kbuild  defconfig_test.h  sync_trace.h
arm_scmi/: Kbuild
can_dev/: Kbuild  can-dev.c
configs/: crashdump_arm64.defconfig  microdroid_arm64.defconfig  microdroid_x86_64.defconfig
dev-sw-sync/: Kbuild  Kconfig  Makefile  sw_sync.c  sync_trace.h
drivers/gpu/drm/virtio/: Kbuild  virtgpu_display.c  virtgpu_drv.c  virtgpu_ioctl.c  virtgpu_object.c  virtgpu_trace.h
drivers/media/virtio/: Kbuild  virtio_video_device.c  virtio_video_driver.c
drivers/staging/dev-sw-sync/: Kbuild  sw_sync.c  sync_trace.h
drivers/virtio/: Kbuild  virtio_wl.c
fs/fuse/: Kbuild  fuse_vendor.c
goldfish_drivers/: Kbuild  Makefile  OWNERS  bar.c  defconfig_test.h  foo.c  goldfish_address_space.c  goldfish_pipe.c  goldfish_pipe_qemu.h  goldfish_pipe_v1.c  goldfish_pipe_v2.c  goldfish_sync.c
gs_usb/: Kbuild
include/drivers/gpu/drm/virtio/: virtgpu_trace.h
include/uapi/drm/: virtgpu_drm.h
include/uapi/linux/: fuse_vendor.h  virtio_ids.h  virtwl.h
kleaf_test/: BUILD.bazel  Kconfig.ext  build.config.kleaf_test  child.c  child_lib.c  client.c  copts.c  copts_implicit_include.h  include_test.c  include_test_implicit.c  include_test_lib.c  include_test_lib_implicit.c  kleaf_test.bzl  kleaf_test.fragment  lib.c  min.c  must_be_set.c  must_present.c  nothing.c  test.proftext  use_trace_printk.c  vendor_boot_modules_list
kleaf_test/dts/: BUILD.bazel  Makefile  fake.dts
kleaf_test/genfiles_test/: child.c  mod.c
kleaf_test/include/: include_test_lib.h
kleaf_test/menuconfig_test/: BUILD.bazel  Kconfig.ext  ddk_mod.c  my_ddk_module_defconfig
kleaf_test/mixed_dep_test/: BUILD.bazel  README.md
kleaf_test/mixed_dep_test/ddk_module/: BUILD.bazel  ddk_mod.c  ddk_mod.h
kleaf_test/mixed_dep_test/kernel_module/: BUILD.bazel  Kbuild  Makefile  kernel_mod.c
mm/: Kbuild  mglru_sysfs.c
rtl8821cu/os_dep/: osdep_service.c
scmi_iio/: Kbuild
uapi/drm/: virtgpu_drm.h
uapi/linux/: virtio_gpu.h  virtio_video.h  virtio_wl.h  virtwl.h
v4l2loopback/: Makefile  v4l2loopback.c
virtio_dxgkrnl/: Kbuild  dxgadapter.c  dxgglobal.c  dxgglobal.h  dxgkrnl.h  dxgprocess.c  dxgsyncfile.c  dxgsyncfile.h  dxgvmbus.c  dxgvmbus.h  hmgr.c  hmgr.h  ioctl.c  virtio_dxgkrnl.c  virtio_dxgkrnl.h
virtio_dxgkrnl/include/uapi/: d3dkmthk.h
virtio_gpu/: Kbuild  virtgpu_debugfs.c  virtgpu_display.c  virtgpu_drv.c  virtgpu_drv.h  virtgpu_fence.c  virtgpu_gem.c  virtgpu_ioctl.c  virtgpu_kms.c  virtgpu_object.c  virtgpu_plane.c  virtgpu_prime.c  virtgpu_trace.h  virtgpu_ttm.c  virtgpu_vq.c  virtgpu_vram.c
virtio_mmio/: Kbuild  virtio_mmio.c
virtio_snd/: Kbuild  virtio_card.c  virtio_kctl.c
virtio_video/: Kbuild  trace.h  virtio_video_device.c  virtio_video_driver.c
virtio_wl/: Kbuild  virtio_wl.c
